<resources>
    <string name="app_name">SINE Isochronic Entrainer</string>
    <string name="title_activity_browser">Presets</string>
    <string name="download_presets">Download Presets</string>
    <string name="theyre_free">They\'re free!</string>
    <string name="presets_url">http://isochronic.io/setLocale.php?l=en&amp;r=presets.php%3Fapp=true</string>
    <string name="load_error">An error occurred while loading the Preset</string>
    <string name="no_connection">No Internet connection</string>
    <string name="download_success">Preset downloaded</string>
    <string name="download_fail">Download failed</string>
    <string name="delete_confirm">Delete Preset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="duration">Length</string>
    <string name="loops_after">loops after</string>
    <string name="purchase">Remove ads</string>
    <string name="purchase_url">market://details?id=com.dosse.bwentrain.androidPlayerKey</string>
    <string name="title_activity_about">About SINE</string>
    <string name="exit">Exit</string>
    <string name="about_text_1">SINE Isochronic Entrainer</string>
    <string name="about_text_2">Free and Open Source Brainwave Entrainment Application</string>
    <string name="about_text_3">Credits and legal jargon</string>
    <string name="about_text_4">This application is developed by Federico Dossena and is distributed under the GNU GPLv3 License.\nLibBWEntrainment, LibBWEntrainment-Renderer-Isochronic and LibBWEntrainment-SoundBackends-Android are developed by Federico Dossena and are licensed under the GNU LGPLv3 License.\nSome of the graphics in this application were downloaded from  http://icons8.com/.</string>
    <string name="website">Visit our website</string>
    <string name="website_url">http://isochronic.io</string>
    <string name="socialCrap">Follow SINE</string>
    <string name="fb">Facebook</string>
    <string name="fb_url">https://www.facebook.com/pages/SINE-Isochronic-Entrainer/649115715183345</string>
    <string name="tw">Twitter</string>
    <string name="tw_url">https://twitter.com/sineisochronic</string>
    <string name="gp">Google+</string>
    <string name="gp_url">https://plus.google.com/b/101215926277332300359/101215926277332300359/posts</string>
    <string name="playStore">Rate application</string>
    <string name="playStore_url">market://details?id=com.dosse.bwentrain.androidPlayer</string>
    <string name="intro1">Thank you for downloading SINE Isochronic Entrainer</string>
    <string name="intro2">We hope you enjoy it as much as we enjoyed making it</string>
    <string name="intro1u">Thank you for updating SINE!</string>
    <string name="intro2u">Don\'t worry, everything is still there!\nWe hope you enjoy the new colorful look :)</string>
    <string name="intro3">LET\'S GO!</string>
    <string name="intro2_1">Background playback</string>
    <string name="intro2_2">Allow SINE to run when the display is off or while you\'re using your phone</string>
    <string name="intro2_3">CONTINUE</string>
    <string name="title_activity_details">Preset details</string>
    <string name="reportBug">REPORT A BUG</string>
    <string name="reportBugAddress">dossenus91@gmail.com</string>
    <string name="reportBugSubject">SINE Bug report</string>
    <string name="title_activity_min_min_faggot">Ad blocker detected</string>
    <string name="minminfag1">You\'re blocking ads :(</string>
    <string name="minminfag2">I know, I know, ads are annoying, I use ad blockers too, but we really need your support to keep SINE alive, so please donate or unblock ads</string>
    <string name="minminfag3">(Don\'t worry, we won\'t bother you again)</string>
    <string name="minminfag4">GOT IT</string>
    <string name="title_activity_community">Community</string>
    <string name="community_invalid_presetId">Invalid Preset link</string>
    <string name="community_unknown_url">You are leaving the SINE community</string>
    <string name="load_error_community">Loading failed</string>
    <string name="unknown_download">Only SINE Presets can be downloaded from here</string>
    <string name="forum_url">http://isochronic.io/forum</string>
    <string name="delete">Delete</string>
    <string name="preset_importing">Importing Preset</string>
    <string name="import_preset">Import SINE Preset</string>
    <string name="navigation_drawer_open">Show navigation</string>
    <string name="navigation_drawer_close">Hide navigation</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_presets">Download presets</string>
    <string name="navigation_drawer_community">Community</string>
    <string name="title_activity_settings">Settings</string>
    <string name="noise_switch">Disable Background noise</string>
    <string name="noise_switch_desc">Restart required</string>
    <string name="noise_switch_restarting">SINE will restart in a moment, please wait...</string>
    <string name="disablePowerSaving">Disable Power Saving</string>
    <string name="disablePowerSavingDesc">Use this if playback stops unexpectedly</string>


</resources>
