<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_minminfaggot"
    tools:context="com.dosse.bwentrain.androidPlayer.MinMinFaggot"
    android:background="@color/colorPrimaryDark4"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/tfw"
                android:background="#000000"
                />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag1"
                android:textColor="#ffffff"
                android:textSize="26dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag3"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag2"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minminfag4"
        android:id="@+id/letsgo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:background="@color/colorAccent4" />

</RelativeLayout>
